Create initial prototype